# capstone-2023-29

./: README.md  index.md
gbus-api/: .gitignore  README.md  make_csv_file.py  pyproject.toml  requirements.txt  run.py
gbus-api/app/: main.py
gbus-api/app/api/dependencies/: credential.py
gbus-api/app/api/routes/: api.py
gbus-api/app/api/routes/bus/: bus.py
gbus-api/app/api/routes/favorite/: favorite.py
gbus-api/app/api/routes/model/: 219000013_mult_window.pth  model.py  use_model.py
gbus-api/app/api/routes/station/: station.py
gbus-api/app/api/routes/user/: user.py
gbus-api/app/core/: config.py
gbus-api/app/core/middleware/: cors.py
gbus-api/app/core/settings/: app.py
gbus-api/app/db/: db.py  dependencies.py
gbus-api/app/db/models/: bus.py  bus_data.py  bus_stop.py  favorite.py  station.py  user.py
gbus-api/app/db/repository/: bus.py  bus_station.py  station.py
gbus-api/app/db/repository/bus/: bus.py
gbus-api/app/db/repository/bus_arrival/: bus_arrival.py  bus_stop.json  station.json
gbus-api/app/db/repository/favorite/: favorite.py
gbus-api/app/models/domain/: bus_arrival.py
gbus-api/app/models/schema/: favorite.py  user.py
gbus-api/app/services/: bus.py  favorite.py  model.py  station.py  user.py
gbus-api/datas/: bus.json  bus_data.csv  bus_location_2023-02-12_17-20-16.json  route.json  route_data.txt
gbus-api/datas/init_data/: bus_station.py  bus_station_map.py  crawling.py
gbus-api/map/: map.py  txt_mapping.py
gbus-api/test-env/: Dockerfile
gbus-api/test-env/sql/: create_table.sql
gbus-data/: requirements.txt
(+280 files in other folders)
