[tool.poetry]
name = "gbus"
version = "0.1.0"
description = ""
authors = ["carrysocks <choi73737@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.7"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
